# XL-Lang

./: .gitignore  CmakeLists.txt  README.md  a  link.cpp  main.cpp
src/define/: AST.cpp  AST.h  color.h  type.cpp  type.h
src/front/: CMakeLists.txt  lexer.cpp  lexer.h  logger.cpp  logger.h  parser.cpp  parser.h  token.cpp  token.h
src/lib/: debug.h  guard.h  nestedmap.h
src/lib/nestedmap/: nestedmap.h
src/mid/: CMakeLists.txt
src/mid/ir/: castssa.h  constant.h  idmanager.cpp  idmanager.h  instruction.inc  module.cpp  module.h  opcode.inc  ssa.cpp  ssa.h  use.cpp  use.h  user.h  value.cpp  value.h
src/mid/ir/usedef/: use.cpp  use.h  user.h  value.cpp  value.h
src/mid/visitor/: visitor.cpp  visitor.h
src/mid/walker/: dumper.cpp  dumper.h
src/mid/walker/analyzer/: sema.cpp  sema.h  symbol.cpp  symbol.h
src/mid/walker/dumper/: dumper.cpp  dumper.h
src/mid/walker/irbuilder/: irbuilder.cpp  irbuilder.h
src/opt/: CMakeLists.txt  pass.cpp  pass.h  pass_manager.cpp  pass_manager.h
src/opt/analysis/: blockcalc.cpp
src/opt/transforms/: blockmerge.cpp  hello.cpp
